--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/estiloindex.css">
+    <link rel="stylesheet" type="text/css" href="css/estiloacercadeappet.css">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/logo.png" />
 </head>
 
 <body>
     <%- include('./header'); %>
-    <div id="FondoEslogan">
-        <div id="eslogan">
-        <h1>Adopta uno y salva dos vidas</h1>
-        <h3>Appet reúne protectoras de perros y personas que buscan adoptar una mascota</h3>
+        <div id="content">
+            <h1 class="encabezado">Perfil:</h1>
+
+           
         </div>
-    </div>
-    <%- include('./footer'); %>
+
+        <%- include('./footer'); %>
 </body>
 
 </html>
