--- a/public/css/estilocomoadoptar.css
+++ b/public/css/estilocomoadoptar.css
@@ -1,20 +1,5 @@
-			.textNegrita {
-			    color: #d23a35;
-			    font-family: inherit;
-			    font-weight: bold;
-			    margin: 30px;
-			}
-			
-			p {
-			    padding-top: 10px;
-			}
-			
 			.tnegrita {
 			    font-weight: bold;
-			}
-			
-			.justify {
-			    text-align: justify;
 			}
 			
 			.italic {
@@ -28,18 +13,35 @@
 			    padding: 5px 30px;
 			}
 			
-			.divImg {
-			    width: 650px;
-			}
-			
 			.imagen {
 			    width: 640;
 			    height: 320;
 			    margin-bottom: 10px;
 			}
 			
-			.texto p {
-			    font-family: 'Bree Serif', serif;
-			    font-size: 20px;
-			    color: rgb(115, 115, 115);
+			.justify {
+				font-family: 'Bree Serif', serif;
+				font-size: 20px;
+				color: rgb(115, 115, 115);
+			}
+			
+			.ucm {}
+
+			.cajatexto {
+				padding: 15px 30px;
+				color: rgb(77, 77, 77);
+				background-color: rgb(242, 242, 242);
+			}
+
+			.centrar {
+				display: flex;
+				align-items: center;
+			}
+
+			.encabezado {
+				padding: 5px 30px;
+			}
+
+			.abajo {
+				margin-bottom: 30px;
 			}
