--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,12 +7,24 @@
             <a href="index"><img class="logo" src="img\logo.png" alt="APPet@Corporation"></a>
         </div>
         <div class="sesion">
+            <% if(idU==undefined){ %>
             <div class="col-lg-12">
                 <button type="button" class="btn btn-primary inicioSesion" data-toggle="modal" data-target="#exampleModal">Iniciar Sesión</button>
             </div>
             <div class="col-lg-12">
                 <button type="button" class="btn btn-danger registro">Registrarse</button>
             </div>
+            <% }else{ %>
+            <div class="col-lg-12">
+                <form>
+                    <button type="submit" formmethod="get" formaction="/cerrarSesion" class="btn btn-primary">Cerrar Sesión</button>
+                </form>
+            </div>
+            <div class="col-lg-12">
+                <button type="button" class="btn btn-danger modificar">Modificar</button>
+            </div>
+            <% } %>
+           
         </div>
     </nav>
     <nav class="navbar navbar-inverse">
@@ -36,14 +48,14 @@
                 <h5 class="modal-title" id="exampleModalLabel">Iniciar Sesión</h5>
             </div>
             <div class="modal-body">
-                <form method="POST" action="/sesion" class="formIS">
+                <form  class="formIS">
                     <div class="form-group">
                         <label for="exampleInputEmail1">E-mail: </label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="Enter email">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Contraseña</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        <input type="password" class="form-control" id="exampleInputPassword1" name="pass" placeholder="Password">
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="adoptante" checked>
@@ -58,14 +70,14 @@
 				</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="protectora">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="admin">
                         <label class="form-check-label" for="gridRadios3">
 				Soy administrador
 				</label>
                     </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Iniciar Sesión</button>
+                <button type="submit" formmethod="post" formaction="/iniciarSesion" class="btn btn-primary">Iniciar Sesión</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
             </div>
             </form>
