--- a/views/listarperros.ejs
+++ b/views/listarperros.ejs
@@ -6,31 +6,40 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/estiloslistaperros.css">
 		<link rel="icon" type="image/png" href="img/logo.png" />
 	</head>
 	<body>
 		<%- include('./header'); %>
     <div class="listaperros">
-      <h3>Mostrando perros:</h3>
-        <div class="panel-body">
-			<!--Inicio de los paneles individuales de los perros-->
-			<% perros.forEach(p => { %>
-			<div class="col-lg-2">
-				<div class="panel panel-default">
-					<div class="panel-heading"><span>
-						<%=p.nombre %>
-						</span></div> <!-- Nombre del perro-->
-					<div class="panel-body">
-						<img class="fotoperro img-thumbnail" src="img/imgperros/<%=p.foto%>"
-						 <!--boton-->
-						<button type="button" class="btn btn-success"data-toggle="modal" data-target="#perro_1">Ver</button>
-						<!--Aqui acaba el panel emergente-->
+			<h3>Mostrando perros:</h3>
+
+				<div class="panel-body">
+				<!--Inicio de los paneles individuales de los perros-->
+				<% perros.forEach(p => { %>
+					<div class="col-sm-4 col-md-3 col-lg-2">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<span><%= p.nombre %></span>
+							</div> <!-- Nombre del perro-->
+							<div class="panel-body">
+								<div class="contImg">
+									<img class="fotoperro img-responsive" src="img/imgperros/<%=p.foto%>">
+								</div>
+								<!--boton-->
+								<div class="contBot">
+									<form action= "/detalleperro.html" method="GET">
+										<input type="submit" class="btn btn-success" value= "Ver a <%=p.nombre%> ">
+										<input type="hidden" name="idPerro" value="<%= p.id%>">
+									</form>
+								</div>
+								<!--Aqui acaba el panel emergente-->
+							</div>
+						</div>
 					</div>
+				<% }); %>
+				<!--Final de los panel individual de los perros-->
 				</div>
-            </div>
-			<% }); %>
-			<!--Final de los panel individual de los perros-->
-        </div>
     </div>
 		<%- include('./footer'); %>
 	</body>
