--- a/views/acercadeappet.ejs
+++ b/views/acercadeappet.ejs
@@ -1,5 +1,7 @@
 <html>
 
+<!-- Página web que muestra información acerca de Appet-->
+
 <head class="headerColor">
     <title>APPet</title>
     <meta charset="utf-8">
