--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" type="text/css" href="css/estilofooter.css">
 
+<!-- Página web plantilla que muestra el footer-->
 
 <footer>
     <div class="footer" id="footer">
@@ -8,17 +9,16 @@
                 <div class="col-sm-6">
                     <h3 class="texto"> Miembros del equipo </h3>
                     <ul>
-                        <li> <a href="https://github.com/myscel"> Eduardo Gonzalo Montero</a> </li>
-                        <li> <a href="#"> Paulo José Colombo Dos Santos </a> </li>
-                        <li> <a href="#"> Denis Raicu </a> </li>
-                        <li> <a href="#"> Gonzalo Rivas </a> </li>
-                        <li> <a href="#"> Mario</a> </li>
-                        <li> <a href="#"> Irene Josefina </a> </li>
-                        <li> <a href="#"> Yhondri </a> </li>
-                        <li> <a href="#"> Luis Eduardo </a> </li>
-                        <li> <a href="#"> Sergio </a> </li>
-                        <li> <a href="#"> Jaime </a> </li>
-                        <li> <a href="#"> Ricardo </a> </li>
+                        <li> <a href="https://github.com/myscel"> Eduardo Gonzalo</a> </li>
+                        <li> <a href="https://github.com/pjcolombo"> Paulo José Colombo Dos Santos </a> </li>
+                        <li> <a href="https://github.com/DenisRaicu"> Denis Raicu </a> </li>
+                        <li> <a href="https://github.com"> Gonzalo Rivas </a> </li>
+                        <li> <a href="https://github.com/MarioSanc"> Mario Sánchez</a> </li>
+                        <li> <a href="https://github.com"> Irene Josefina Ventura</a> </li>
+                        <li> <a href="https://github.com"> Luis Eduardo Paucar  </a> </li>
+                        <li> <a href="https://github.com"> Sergio Tarancón </a> </li>
+                        <li> <a href="https://github.com"> Jaime Amer  </a> </li>
+                        <li> <a href="https://github.com"> Ricardo Caballero </a> </li>
 
                     </ul>
                 </div>
@@ -27,29 +27,28 @@
                     <ul>
                         <li>
                             <div class="input-append newsletter-box text-center">
-                                <input type="text" class="full text-center" placeholder="Email ">
-                                <button class="btn  bg-gray" type="button"> appet@ucm.es <i class="fa fa-long-arrow-right"> </i> </button>
+                                <input type="text" class="full text-center" placeholder="appet@ucm.es">
                             </div>
                         </li>
                     </ul>
                     <ul class="social container row">
-                        <li class="col-md-2">
+                        <li class="col-md-3">
                             <a href="https://twitter.com/APPetTwit"><img class="rrss" src="./img/twitter.png"> </a>
                         </li>
 
-                        <li class="col-md-2">
+                        <li class="col-md-3">
                             <a href="https://www.facebook.com/APPet-346352155877924/?modal=admin_todo_tour">
                                 <img class="rrss" src="./img/facebook.png">
                             </a>
                         </li>
 
-                        <li class="col-md-2">
+                        <li class="col-md-3">
                             <a href="https://www.instagram.com/appet_insta/?hl=es">
                                 <img class="rrss" src="./img/instagram.png">
                             </a>
                         </li>
-                        <li class="col-md-2">
-                            <a href="https://www.youtube.com/channel/UCOU8eY3WM1t6DdP8wXMnoVg">
+                        <li class="col-md-3">
+                            <a href="https://www.youtube.com/watch?v=XLgmqAf3Vu4&list=PLwxYeOpSFNb-yRatY8I93SaaYMh6tDmnC">
                                 <img class="rrss" src="./img/youtube.png">
                             </a>
                         </li>
@@ -60,7 +59,7 @@
     </div>
 
     <div class="footer-bottom">
-        <div class="row">
+        <div class="row pruebas">
 
             <div class="col-md-5">
                 <p class="pull-left"> Proyecto Appet GPS 2018 </p>
