--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <html>
 
+<!-- Página web de inicio de appet-->
+
 <head class="headerColor">
     <title>APPet</title>
     <meta charset="utf-8">
@@ -13,13 +15,13 @@
 
 <body>
     <%- include('./header'); %>
-    <div id="FondoEslogan">
-        <div id="eslogan">
-        <h1>Adopta uno y salva dos vidas</h1>
-        <h3>Appet reúne protectoras de perros y personas que buscan adoptar una mascota</h3>
+        <div id="FondoEslogan">
+            <div id="eslogan">
+                <h1>Adopta uno y salva dos vidas</h1>
+                <h3>Appet reúne protectoras de perros y personas que buscan adoptar una mascota</h3>
+            </div>
         </div>
-    </div>
-    <%- include('./footer'); %>
+        <%- include('./footer'); %>
 </body>
 
 </html>
