--- a/public/css/estilodetalleperro.css
+++ b/public/css/estilodetalleperro.css
@@ -1,25 +1,44 @@
-		.negrita {
-			font-size: 20px;
-			font-weight:bolder;
-		}
-
-		.content{
-			display: flex;
-			flex-direction: row;
-			justify-content: space-between;
-			align-items: center;
-			padding:0% 5% 2% 5%;
-		}
-		
-		.datos{
-			padding-right:5%;
-		}
-		.titulo{
-			text-align:center;
-			font-family: 'Bree Serif', serif;
-		}
-		.justify {
-			font-family: 'Bree Serif', serif;
-			font-size: 20px;
-			color: rgb(115, 115, 115);
-		}
+	.titulo {
+	    text-align: center;
+	    font-family: 'Bree Serif', serif;
+	    margin-bottom: 50px;
+	}
+	
+	.negrita {
+	    font-size: 20px;
+	    font-weight: bolder;
+	}
+	
+	.content {
+	    display: flex;
+	    flex-direction: row;
+	    justify-content: center;
+	    align-items: center;
+	    margin-bottom: 70px;
+	    margin-right: 10%;
+	    margin-left: 10%;
+	}
+	
+	.imagen {
+	    margin-right: 10%;
+	}
+	
+	.justify {
+	    font-family: 'Bree Serif', serif;
+	    font-size: 20px;
+	    color: rgb(115, 115, 115);
+	}
+	
+	.botonera {
+	    display: flex;
+	    flex-direction: column;
+	    justify-content: center;
+	    align-items: center;
+	    margin: 30px;
+	}
+	
+	.volver {
+	    font-size: 20px;
+	    font-weight: bold;
+	    margin: 15px;
+	}
