--- a/public/css/estilodetalleprotectora.css
+++ b/public/css/estilodetalleprotectora.css
@@ -3,7 +3,29 @@
 }
 
 .negrita {
+    display: inline-block;
     font-size: 30px;
+    font-family: 'Bree Serif', serif;
+    color: rgb(115, 115, 115);
+}
+
+.botonera {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;
+}
+
+.volver {
+    font-size: 20px;
+}
+
+.datos {
+    display: inline-block;
+    font-size: 20px;
+    font-family: 'Bree Serif', serif;
+    color: rgb(37, 37, 37);
 }
 
 .externo {
