--- a/public/css/estiloheader.css
+++ b/public/css/estiloheader.css
@@ -1,10 +1,12 @@
 /********************* cabeceraSS *********************/
-.headerColor{
+
+.headerColor {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
+
 .logo1 img {
     height: auto !important;
 }
@@ -48,8 +50,6 @@
     display: inline-block;
 }
 
-
-
 .logo {
     width: 150px;
 }
@@ -57,8 +57,7 @@
 .logo1 {
     display: inline-block;
     margin-left: 2%;
-    MARGIN: 5px 2% ;
-
+    MARGIN: 5px 2%;
 }
 
 .sesion {
@@ -85,16 +84,16 @@
 /********************* cabeceraCS *********************/
 
 .headerColor {
-    background-color: #ffa64d;
-    margin-bottom:0px ;
+    background-color: rgb(204, 255, 230);
+    margin-bottom: 0px;
 }
 
 .navbarColor {
-    background-color: #ffaa80;
+    background-color: rgb(204, 255, 230);
 }
 
 .listaHeader a:hover {
-    background-color: #ff884d;
+    background-color: rgb(204, 255, 230);
 }
 
 .sesion1 {
@@ -116,5 +115,3 @@
     display: inline-block;
     padding: 0% 5%;
 }
-
-
