--- a/public/css/estilolistaprotectora.css
+++ b/public/css/estilolistaprotectora.css
@@ -4,10 +4,17 @@
 
 .info {
     width: 230px;
+    font-family: 'Bree Serif', serif;
+    color: rgb(37, 37, 37);
+
 }
 
 .externo {
     display: flow-root;
     justify-content: space-around;
     align-items: center;
+}
+
+.botonInfo {
+    width: 200px;
 }
