--- a/views/protectoras.ejs
+++ b/views/protectoras.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/estilolistaprotectora.css">
 
 
@@ -37,7 +38,7 @@
                         </div>
                         <form action="/detalleprotectora.html" method="GET">
                             <input type="hidden" name="ident" value="<%= p.id %>">
-                            <input type="submit" class="btn btn-info info" value="+Info">
+                            <input type="submit" class="btn btn-info botonInfo" value="Info">
                         </form>
 
                     </div>
