--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -7,8 +7,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <h3 class="texto"> Miembros del equipo </h3>
+                    <h3 class="texto">Repositorio del Equipo </h3>
                     <ul>
+                         <li> <a href="https://github.com/JaimeAmer/appet"> APPET</a> </li>
+                        <!--
                         <li> <a href="https://github.com/myscel"> Eduardo Gonzalo</a> </li>
                         <li> <a href="https://github.com/pjcolombo"> Paulo José Colombo Dos Santos </a> </li>
                         <li> <a href="https://github.com/DenisRaicu"> Denis Raicu </a> </li>
@@ -18,7 +20,7 @@
                         <li> <a href="https://github.com"> Luis Eduardo Paucar  </a> </li>
                         <li> <a href="https://github.com"> Sergio Tarancón </a> </li>
                         <li> <a href="https://github.com"> Jaime Amer  </a> </li>
-                        <li> <a href="https://github.com"> Ricardo Caballero </a> </li>
+                        <li> <a href="https://github.com"> Ricardo Caballero </a> </li>-->
 
                     </ul>
                 </div>
