--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,16 +13,16 @@
                     <button type="button" class="btn btn-primary inicioSesion" data-toggle="modal" data-target="#exampleModal">Iniciar Sesión</button>
                 </div>
                 <div class="col-lg-12">
-                    <button type="button" class="btn btn-danger registro">Registrarse</button>
+                    <button type="button" class="btn registro">Registrarse</button>
                 </div>
                 <% }else{ %>
                     <div class="col-lg-12">
                         <form>
-                            <button type="submit" formmethod="get" formaction="/cerrarSesion" class="btn btn-primary">Cerrar Sesión</button>
+                            <button type="submit" formmethod="get" formaction="/cerrarSesion" class="btn btn-danger">Cerrar Sesión</button>
                         </form>
                     </div>
                     <div class="col-lg-12">
-                        <button type="button" class="btn btn-danger modificar">Modificar</button>
+                        <button type="button" class="btn btn-primary modificar">Modificar</button>
                     </div>
                     <% } %>
 
@@ -58,24 +58,26 @@
                         <label for="exampleInputPassword1">Contraseña</label>
                         <input type="password" class="form-control" id="exampleInputPassword1" name="pass" placeholder="Password">
                     </div>
+                    <!--
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="adoptante" checked>
                         <label class="form-check-label" for="gridRadios1">
 				Soy adoptante
 				</label>
-                    </div>
+                    </div>-->
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="protectora">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="protectora" checked>
                         <label class="form-check-label" for="gridRadios2">
 				Soy protectora
 				</label>
                     </div>
+                    <!--
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="admin">
                         <label class="form-check-label" for="gridRadios3">
 				Soy administrador
 				</label>
-                    </div>
+                    </div> -->
             </div>
             <div class="modal-footer">
                 <button type="submit" formmethod="post" formaction="/iniciarSesion" class="btn btn-primary">Iniciar Sesión</button>
