--- a/views/detalleperro.ejs
+++ b/views/detalleperro.ejs
@@ -1,10 +1,9 @@
 <html>
-
 <!-- Página web que muestra información detallada del perro solicitado por sl usuario-->
 
 <head class="headerColor">
     <title>APPet</title>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -22,7 +21,7 @@
         </h1>
         <div class="content">
             <div class="imagen">
-                <img class="img-thumbnail" src="img/imgperros/<%=perro.foto%>" width="400">
+                <img class="img-thumbnail" src="img/imgperros/<%=perro.foto%>">
             </div>
             <div class="datos">
                 <p class="negrita">Protectora:
@@ -51,7 +50,12 @@
                 </p>
             </div>
         </div>
-
+        <form action="/detalleprotectora.html" method="GET">
+            <div class="botonera">
+                <input type="hidden" name="ident" value="<%= perro.idProtectora %>">
+                <input type="submit" class="btn btn-success volver" value="¡Ver información de la protectora!">
+            </div>
+        </form>
         <form action="/iralistarperros" method="GET">
             <div class="botonera">
                 <input type="submit" class="btn btn-info volver" value="Volver">
