--- a/public/css/estiloslistaperros.css
+++ b/public/css/estiloslistaperros.css
@@ -21,6 +21,12 @@
     font-family: 'Bree Serif', serif;
 }
 
+.nuevoperro {
+    font-family: 'Bree Serif', serif;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
 .contenedor {
     font-family: 'Bree Serif', serif;
     font-weight: bolder;
