--- a/views/detalleperro.ejs
+++ b/views/detalleperro.ejs
@@ -21,7 +21,7 @@
         </h1>
         <div class="content">
             <div class="imagen">
-                <img class="img-thumbnail" src="img/imgperros/<%=perro.foto%>">
+                <img class="img-thumbnail" src="img/perro/">
             </div>
             <div class="datos">
                 <p class="negrita">Protectora:
