--- a/views/listarperrosprotectora.ejs
+++ b/views/listarperrosprotectora.ejs
@@ -34,7 +34,7 @@
                                 <!-- Nombre del perro-->
                                 <div class="panel-body">
                                     <div class="contImg">
-                                        <img class="fotoperro img-responsive" src="img/imgperros/<%=p.foto%>">
+                                        <img class="fotoperro img-responsive" src="img/perro/">
                                     </div>
                                     <!--boton-->
                                     <div class="contBot">
