Correccion img Perro
ver desde la bd la img del perro

--- a/views/detalleperro.ejs
+++ b/views/detalleperro.ejs
@@ -21,7 +21,7 @@
         </h1>
         <div class="content">
             <div class="imagen">
-                <img class="img-thumbnail" src="img/perro/">
+                <img class="img-thumbnail" src="img/perro/<%= perro.id %>">
             </div>
             <div class="datos">
                 <p class="negrita">Protectora:
