--- a/views/detalleprotectora.ejs
+++ b/views/detalleprotectora.ejs
@@ -22,7 +22,7 @@
 
             <div class="externo">
                 <p class="fotoprotectora">
-                    <img class="img-thumbnail" src="img/protectora/" width="600">
+                    <img class="img-thumbnail" src="img/protectora/<%= datos.id %>" width="600">
 
                 </p>
                 <p class="textoimagen">
