--- a/views/perrosmiosprotectora.ejs
+++ b/views/perrosmiosprotectora.ejs
@@ -33,7 +33,7 @@
                                 <!-- Nombre del perro-->
                                 <div class="panel-body">
                                     <div class="contImg">
-                                        <img class="fotoperro img-responsive" src="img/imgperros/<%=p.foto%>">
+                                        <img class="fotoperro img-responsive" src="img/perro/<%= p.id %>">
                                     </div>
                                     <!--boton-->
                                     <div class="contBot">
