--- a/views/protectoras.ejs
+++ b/views/protectoras.ejs
@@ -27,7 +27,7 @@
                 <div class="container">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <img class="fotoprotectora img-thumbnail" src="img/imgprotectoras/<%=p.imagen%>">
+                            <img class="fotoprotectora img-thumbnail" src="img/protectora/<%=p.id%>">
                         </div>
                         <div class="panel-body externo">
                             <div>
