--- a/public/css/estiloheader.css
+++ b/public/css/estiloheader.css
@@ -134,6 +134,9 @@
 		margin: 100px auto;
 	}
 	
+	.bcolorfondo{
+	    background-color: rgb(77, 127, 45);
+	}
 	@media only screen and (max-width: 600px) {
 			.registrarseStyle{
 				display: flex;
