--- a/views/header.ejs
+++ b/views/header.ejs
@@ -43,7 +43,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <% if(tipo === "Protectora"){ %>
-                    <li><a class="nav-link" href="iramiperfilprotectora">Mi perfil</a></li>
+                    <li><a class="nav-link" href="/perfil">Mi perfil</a></li>
                     <!-- Redirige a la lista de protectoras -->
                     <li><a class="nav-link" href="iraperrosmiosprotectora">Mis perros</a></li>
                     <li><a class="nav-link" href="#"> Solicitudes de adopción</a></li>
