--- a/views/header.ejs
+++ b/views/header.ejs
@@ -50,11 +50,11 @@
 
                     <% } else {%>
 
-                        <li><a class="nav-link" href="iracomoadoptar">Cómo adoptar</a></li>
+                        <li><a class="nav-link" href="comoadoptar">Cómo adoptar</a></li>
                         <!-- Redirige a la lista de perros -->
-                        <li><a class="nav-link" href="iralistarperros">Perros <span class="sr-only">(current)</span></a></li>
+                        <li><a class="nav-link" href="perros">Perros <span class="sr-only">(current)</span></a></li>
                         <!-- Redirige a la lista de protectoras -->
-                        <li><a class="nav-link" href="iraprotectora">Protectoras</a></li>
+                        <li><a class="nav-link" href="protectoras">Protectoras</a></li>
                         <!-- Redirige a la lista de protectoras -->
                         <% } %>
 
