--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -68,7 +68,7 @@
             </div>
 
             <div class="col-md-3">
-                <p class="pull-right"> <a href="iraacercadeappet">
+                <p class="pull-right"> <a href="acercadeappet">
                         Acerca de appet
                     </a>
                 </p>
