Refactorizacion de Peticiones

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -45,7 +45,7 @@
                 <% if(tipo === "Protectora"){ %>
                     <li><a class="nav-link" href="/perfil">Mi perfil</a></li>
                     <!-- Redirige a la lista de protectoras -->
-                    <li><a class="nav-link" href="iraperrosmiosprotectora">Mis perros</a></li>
+                    <li><a class="nav-link" href="/protectora/misperros">Mis perros</a></li>
                     <li><a class="nav-link" href="#"> Solicitudes de adopción</a></li>
 
                     <% } else {%>
