--- a/views/misperros.ejs
+++ b/views/misperros.ejs
@@ -58,12 +58,11 @@
 
             </div>
             <div class="contBot">
-                <form action="/añadirperroprotectora" method="GET">
+                <form action="/nuevoperro" method="GET">
                     <input type="submit" class="btn btn-primary nuevoperro" value="Añadir perro">
-                    <input type="hidden" name="idProtectora" value="<%= idp %>">
                 </form>
             </div>
-        </div>
+        </div> -->
         <%- include('./footer'); %>
 </body>
 
